# aoc2024

./: README.md  good_morning.py  merry_christmas.py  pyproject.toml
solutions/day01/: solution.py
solutions/day02/: solution.py
solutions/day03/: solution.py
solutions/day04/: solution.py
solutions/day05/: solution.py
solutions/day06/: solution.py
solutions/day07/: solution.py
solutions/day08/: solution.py
solutions/day09/: solution.py
solutions/day10/: solution.py
solutions/day11/: solution.py
solutions/day12/: solution.py
solutions/day13/: solution.py
solutions/day14/: solution.py
solutions/day15/: part1_regex.py  solution.py
solutions/day16/: example3.txt  example4.txt  solution.py
solutions/day17/: solution.py
