[project]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code 2024"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    { name = "Seto Balian", email = "seto.balian@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "ipython>=8.30.0",
    "pyright>=1.1.389",
    "ruff>=0.8.1",
]

[tool.pyright]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
